fix simulator label and layout issues + fix delete simulated participant also delete history

--- a/app/webroot/css/basic.css
+++ b/app/webroot/css/basic.css
@@ -1750,3 +1750,12 @@
 .simulator-add-participant {
     width: 500px;
 }
+
+.simulator-add-participant label {
+    padding-left: 4px;
+    padding-right: 8px;
+}
+
+.simulator-add-participant textarea {
+    width: 600px;
+}
